Bug 1214506 -  Ensure OggReader sets proper IDs for its tracks. r=jya, a=ritu